--- a/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,3 @@
-<ul>
-    <li *myFor="let n em [1,2,3]">{{n}}</li>
-</ul>
+<button mat-raised-button (click)="navigateProductCreate()" color="primary">Novo Produto</button>
+
+<app-product-read></app-product-read>
