--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -16,10 +16,27 @@
             <td mat-cell *matCellDef="let row">{{row.name}}</td>
         </ng-container>
 
-        <!-- Name Column -->
+        <!-- Price Column -->
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef>Preço</th>
             <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL'}}</td>
+        </ng-container>
+
+        <!-- Action Column -->
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Ações</th>
+            <td mat-cell *matCellDef="let row">
+                <a routerLink="/products/update/{{row.id}}">
+                    <i class="material-icons edit">
+                        edit
+                    </i>
+                </a>
+                <a routerLink="/products/delete/{{row.id}}">
+                    <i class="material-icons delete">
+                        delete
+                    </i>
+                </a>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
