feat - Criando serviço de de conexão com a banco de dados e telas de exclusão e atualização de produto

--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-title>
-        Novo Produto
+        Editar Produto
     </mat-card-title>
     <form>
         <mat-form-field>
@@ -11,7 +11,7 @@
         </mat-form-field>
     </form>
 
-    <button mat-raised-button (click)="createProduct()" color="primary">Salvar</button>
+    <button mat-raised-button (click)="updateProduct()" color="primary">Salvar</button>
 
     <button mat-raised-button (click)="cancelProduct()" color="warn">Cancelar</button>
 </mat-card>
