--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -8,7 +8,7 @@
     <span class="title-group">
         <a>
             <i class="material-icons">
-                dashboard
+                house
             </i>
             Inicio
         </a>
