--- a/frontend/src/app/components/template/nav/nav.component.css
+++ b/frontend/src/app/components/template/nav/nav.component.css
@@ -1,5 +1,4 @@
 .sidenav {
-    background-color: #3F51B5;
     width: 200px;
 }
 
@@ -14,4 +13,15 @@
 .content {
     padding: 16px;
     background-color: #FFF;
+}
+
+.navlist {
+    display: flex;
+    align-items: center;
+}
+
+.navlist a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
