--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -6,11 +6,11 @@
     </span>
 
     <span class="title-group">
-        <a>
+        <a routerLink="{{routeUrl}}">
             <i class="material-icons">
-                house
+                {{icon}}
             </i>
-            Inicio
+            {{title}}
         </a>
     </span>
 </mat-toolbar>
